# jupyter_watchdog

./: .gitignore  README.md  jupyter_watchdog.py  pyproject.toml  test_watchdog.ipynb
src/jupyter_watchdog/: __init__.py  watchdog.py
src/jupyter_watchdog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
